--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "index.js",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11"
   },
@@ -8,8 +9,8 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "node ./10_29/index.js",
-    "dev": "nodemon ./10_29/index.js",
+    "start": "node ./11_05/index.js",
+    "dev": "nodemon ./11_05/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
