--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "main": "index.js",
   "dependencies": {
     "crypto-js": "^4.0.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "node ./11_12/index.js",
-    "dev": "nodemon ./11_12/index.js",
+    "start": "node ./11_19/index.js",
+    "dev": "nodemon ./11_19/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
